tests/errors/stud/bad-expr-parsing2.c
void main()
{
	int x = ?*;; // infinite array?
	printid(x);
}